<?php die(); ?>
Akeeba Panopticon 1.0.3
================================================================================
+ .env support [gh-34]
# [HIGH] Old MariaDB versions don't support JSONPath [gh-201]
# [HIGH] Very low self-update timeout (5 seconds) [gh-185]
# [HIGH] Too tight permissions check

Akeeba Panopticon 1.0.2
================================================================================
! Security [critical]: non-super users can change or remove other users, including super users
+ TOTP Multi-factor Authentication (gh-168)
+ Extensions Update Overview page (gh-178)
+ Core Updates Overview page (gh-178)
+ Automated task to check for self-updates (gh-174)
+ Take a backup before updating Joomla! (gh-16)
~ Improve behavior clicking Edit without selecting a site
~ Improve the MFA method selection layout
~ Caching tweaks
# [LOW] Missing email template type for failed Joomla! update
# [LOW] Invalid extensions could cause PHP errors listing a site's extensions

Akeeba Panopticon 1.0.1
================================================================================
! Security update: TinyMCE 6.7.1
~ Update Gravatar URLs with SHA-256
+ Cancel pending Joomla! update (gh-162)
+ Joomla! version support status (gh-163)
+ Link to the data source for the PHP version information
+ Debug information for the initial connection
+ Note when updates are running on each site
# [HIGH] Constant core update rescheduling / emails
# [HIGH] Constant extensions update rescheduling / emails
# [HIGH] Cannot connect to Joomla! 3 sites which don't have SEF URLs with URL rewriting enabled
# [HIGH] Manually scheduled Joomla! updates are cancelled when evaluating automatic updates
# [HIGH] PHP error when there are backup records without a backup start time
# [MEDIUM] Joomla! Update options falsely claim that the time to install updates is in GMT; it's local
# [MEDIUM] Log view: timezone calculation was wrong
# [MEDIUM] Log view: no site names shown